--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
           <a href="#" class="btn btn-lg btn-facebook btn-block">Facebook</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" class="btn btn-lg btn-google btn-block">Google</a>
+          <a href="#" class="btn btn-lg btn-google btn-block">Google Plus</a>
         </div>
       </div>
       <div class="login-or">
