--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -89,25 +89,33 @@
      *ngIf="register.touched && !register.valid">
      </div>
   <div class="register-page">
-  <header>
-      <a href="javascript:void(0)" class="back" style="display: none">Back To</a>
-     <h3 class="title-txt"> Sign Up</h3>
-     <p>It's <b>free</b> and handly take more than 30 seconds.</p>
-  </header>
-<div class="register-choice-item player-item">
-    <h4>Sign Up as Player </h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-</div>
-<div class="register-choice-item team-item">
-    <h4>Sign Up as Team </h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-</div>
-   <div class="register-choice-item company-item">
-    <h4>Sign Up as Company </h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-</div>
+	<header>
+		<ng-container *ngIf="backsignupshow">
+			<div>
+				<a href="javascript:void(0)" class="back"  (click)="showSignupTypes();" >Back To</a>
+			</div>
+		</ng-container>
+		<h3 class="title-txt"> Sign Up</h3>
+		<p>It's <b>free</b> and handly take more than 30 seconds.</p>
+	</header>
+	<ng-container *ngIf="signuptypeshow">
+		<div class="register-choice-item player-item" (click)="showPlayerSignupForm();">
+			<h4>Sign Up as Player </h4>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+		</div>
+		<div class="register-choice-item team-item" (click)="showTeamSignupForm();">
+			<h4>Sign Up as Team </h4>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+		</div>
+	   <div class="register-choice-item company-item"  (click)="showCompanySignupForm();">
+			<h4>Sign Up as Company </h4>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+		</div>
+	</ng-container>
 <!--player form start-->
-<div class="panel-form player-signup"  style="display: none;">
+<ng-container *ngIf="playersignupshow">
+<div class="panel-form player-signup" >
+	<h1> Player</h1>
    <form class="seminor-login-form">
      <div class="form-group">
        <input type="text" class="form-control" required autocomplete="off">
@@ -142,83 +150,85 @@
      </form>
    <div style="clear:both"></div>
   </div>
-<!--player form end-->
-<div class="panel-form team-signup"  style="display: none;">
+</ng-container>
+  <!--player form end-->
+<ng-container *ngIf="teamsignupshow">
+<div class="panel-form team-signup" >
     <h1> Team</h1>
-   <div class="form-row">
-     <label for="firstName">First Name</label>
-     <input required ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" value="" class="form-control"> 
-     <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid" >Fist Name is required </div>
-   </div>
-  <div class="form-row">
-     <label for="lastName">Last Name</label>
-     <input required ngModel name="lastName"  #lastName="ngModel" id="lastName" type="text" value="" class="form-control">
-          <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid" >Last Name is required </div> 
-   </div>
-    <div class="form-row">
-     <label for="emailID">Email</label>
-     <input id="emailID" required ngModel name="emailID" #emailID="ngModel" type="text" value="" class="form-control"> 
-     <div class="alert alert-danger" *ngIf="emailID.touched && !emailID.valid" >Email Id is required </div> 
-   </div>
-     <div class="form-row">
-     <label for="password">Password</label>
-     <input id="password" minlength="6" maxlength="12" required ngModel name="password"  #password="ngModel"  type="password" value="" class="form-control"> 
-   <div class="alert alert-danger" *ngIf="password.touched && !password.valid" >Password is required </div> 
-   </div>
-    <div class="form-row">
-     <label for="confirmPass">Confirm Password</label>
-     <input id="confirmPass"  minlength="6" maxlength="12" required ngModel name="confirmPass"  #confirmPass="ngModel"  type="password" value="" class="form-control"> 
-      <div class="alert alert-danger" *ngIf="confirmPass.touched && !confirmPass.valid" >Confirm Password is required </div> 
-   </div>
-    <div class="form-row squaredThree">
-        <input type="checkbox" ng-model name="accept" value="None" id="squaredThree" name="check" checked />
-        <label for="squaredThree"></label>
-        <span>I accept the Terms of Use & Privacy Plociy</span>
-   </div>
-   <div class="form-row"  style="margin-bottom:0px; padding-bottom:0px;">
-     <button [disabled]="!f.valid" class="btn rg-btn" style="margin-bottom: 20px;">Register Now</button>
-   </div>
+   <form class="seminor-login-form">
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="user-name">User Name</label>
+     </div>
+     <div class="form-group">
+       <input type="email" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="contact-email">Contact Email</label>
+     </div>
+     <div class="form-group">
+       <input type="password" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="password">Password</label>
+     </div>
+     <div class="form-group">
+       <input type="password" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="password-conf">Confirm Password</label>
+     </div>
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="First-name"> First Name </label>
+     </div>
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="Last-name"> Last Name </label>
+     </div>
+       <div class="btn-check-log">
+           <button type="submit" class="btn-check-login">Sign Up</button>
+       </div>
+       <div class="form-group term-group">
+           By cliking the signUp button, you agree to our <a href="#">Terms & Condition,</a> and <a href="#">Privacy Policy</a>
+       </div> 
+     </form>
    <div style="clear:both"></div>
   </div>
-
-
-<div class="panel-form company-signup"  style="display: none;">
+</ng-container>
+<ng-container *ngIf="companysignupshow">
+<div class="panel-form company-signup" >
     <h1> Company</h1>
-   <div class="form-row">
-     <label for="firstName">First Name</label>
-     <input required ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" value="" class="form-control"> 
-     <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid" >Fist Name is required </div>
-   </div>
-  <div class="form-row">
-     <label for="lastName">Last Name</label>
-     <input required ngModel name="lastName"  #lastName="ngModel" id="lastName" type="text" value="" class="form-control">
-          <div class="alert alert-danger" *ngIf="lastName.touched && !lastName.valid" >Last Name is required </div> 
-   </div>
-    <div class="form-row">
-     <label for="emailID">Email</label>
-     <input id="emailID" required ngModel name="emailID" #emailID="ngModel" type="text" value="" class="form-control"> 
-     <div class="alert alert-danger" *ngIf="emailID.touched && !emailID.valid" >Email Id is required </div> 
-   </div>
-     <div class="form-row">
-     <label for="password">Password</label>
-     <input id="password" minlength="6" maxlength="12" required ngModel name="password"  #password="ngModel"  type="password" value="" class="form-control"> 
-   <div class="alert alert-danger" *ngIf="password.touched && !password.valid" >Password is required </div> 
-   </div>
-    <div class="form-row">
-     <label for="confirmPass">Confirm Password</label>
-     <input id="confirmPass"  minlength="6" maxlength="12" required ngModel name="confirmPass"  #confirmPass="ngModel"  type="password" value="" class="form-control"> 
-      <div class="alert alert-danger" *ngIf="confirmPass.touched && !confirmPass.valid" >Confirm Password is required </div> 
-   </div>
-    <div class="form-row squaredThree">
-        <input type="checkbox" ng-model name="accept" value="None" id="squaredThree" name="check" checked />
-        <label for="squaredThree"></label>
-        <span>I accept the Terms of Use & Privacy Plociy</span>
-   </div>
-   <div class="form-row"  style="margin-bottom:0px; padding-bottom:0px;">
-     <button [disabled]="!f.valid" class="btn rg-btn" style="margin-bottom: 20px;">Register Now</button>
-   </div>
+  <form class="seminor-login-form">
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="user-name">User Name</label>
+     </div>
+     <div class="form-group">
+       <input type="email" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="contact-email">Contact Email</label>
+     </div>
+     <div class="form-group">
+       <input type="password" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="password">Password</label>
+     </div>
+     <div class="form-group">
+       <input type="password" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="password-conf">Confirm Password</label>
+     </div>
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="First-name"> First Name </label>
+     </div>
+     <div class="form-group">
+       <input type="text" class="form-control" required autocomplete="off">
+       <label class="form-control-placeholder" for="Last-name"> Last Name </label>
+     </div>
+       <div class="btn-check-log">
+           <button type="submit" class="btn-check-login">Sign Up</button>
+       </div>
+       <div class="form-group term-group">
+           By cliking the signUp button, you agree to our <a href="#">Terms & Condition,</a> and <a href="#">Privacy Policy</a>
+       </div> 
+     </form>
    <div style="clear:both"></div>
   </div>
+</ng-container>   
+  
   </div><!--register-page end-->
 
 
