--- a/src/app/dashboard-player/dashboard-player.component.css
+++ b/src/app/dashboard-player/dashboard-player.component.css
@@ -12,12 +12,10 @@
 } 
 input.hidden {
     position: absolute;
-    left: 0px;
-    border: 1px solid red;
-    bottom: 0px;
+    left: 212px;
     opacity: 0;
-    width: 100%;
-    height: 100%;
+    width: 176px;
+    height: 200px;
     cursor: pointer;
 }
 .add-pp{
@@ -120,9 +118,29 @@ ul.list-2 label {
     top: 0;
     background: #fff;
     display: none;
+    z-index: 99999;
+    width: 50%;
+    padding: 50px 400px 50px 50px;
+    bottom: 0;
 }
-
 .edit-player-profile h1{
     font-size: 30px;
     color: #000;
+}
+button.close {
+    font-size: 44px;
+    color: #000 !important;
+    opacity: 10;
+}
+.edit-player-profile h1{
+    color: #9fc319;
+}
+#profile-pic {
+    object-fit: cover;
+    width: 176px;
+    height: 176px;
+    border-radius: 100px;
+}
+.profile-img-section{
+    margin-bottom: 20px;
 }
